# LLM-FastAPI

./: .env.sample  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  celery.Dockerfile  config.py  docker-compose.yml  event_handlers.py  fastapi.Dockerfile  fastapi_start.sh  pyproject.toml  requirements-celery-dev.txt  requirements-celery.txt  requirements-dev.txt  requirements-fastapi-dev.txt  requirements-fastapi.txt  requirements.txt  server.py  setup.cfg  start.sh
api/: config.py  prediction.py
api/payloads/: response.py
api/router/: prediction.py
app/: config.py  event_handlers.py  requirements.txt  server.py
app/api/: prediction.py
llm_fastapi/: config.py  event_handlers.py
payloads/: request.py  response.py
src/: enums.py  event_handlers.py  server.py
src/api/: config.py  enums.py  event_handlers.py  prediction.py  server.py
src/api/configs/: config.py
src/api/payloads/: request.py  response.py
src/api/router/: prediction.py
src/celery_tasks/: celeryconfig.py  config.py  ml_model.py  tasks.py  utils.py  worker.py
src/celery_tasks/configs/: config.py
src/celery_tasks/payloads/: response.py
src/configs/: celery_config.py  config.py
src/payloads/: request.py  response.py
src/router/: prediction.py
