[tool.black]
line-length = 119
target-version = ['py38']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = [
    "payloads",
    "router",
    "config",
    "enums",
    "event_handlers"
]

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "llm-fastapi"
version = "0.1.0"
description = ""
authors = ["YoungJae Kim <byeongal@comcom.ai>", "DongHoon Baek <baek@comcom.ai>", "Heewon Shin <heewon@comcom.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.2.7"
fastapi = "^0.79.0"
loguru = "^0.6.0"
redis = "^4.3.4"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
